# SortFilterProxyModel

./: .gitignore  CMakeLists.txt  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  qqmlsortfilterproxymodel_plugin.cpp  sortfilterproxymodel.qbs
filters/: filtercontainer.cpp  filtersqmltypes.cpp
proxyroles/: proxyrolesqmltypes.cpp
sorters/: sortercontainer.cpp  sortersqmltypes.cpp
